# rust_store

./: Cargo.toml
migrations/2022-08-21-181209_create_products/: down.sql  up.sql
migrations/2022-08-23-081328_create_users/: down.sql  up.sql
src/: db_connection.rs  main.rs
src/errors/: application_error.rs  mod.rs  server_error.rs  user_error.rs
src/handlers/: authentication.rs  mod.rs  products.rs  register.rs
src/models/: product.rs  user.rs
src/utils/: jwt.rs
