[package]
name = "rust-store-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
derive_more = "0.99.17"
log = "0.4"
env_logger = "0.8"