[package]
name = "rust-store-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
derive_more = "0.99.17"
log = "0.4"
env_logger = "0.8"
jsonwebtoken = "8"
bcrypt = "0.13"
chrono = {version = "0.4", features = ["serde"]}
csrf = "0.4.1"
actix-identity = "0.5.2"
actix-session = {version = "0.7.1", features = ["redis-rs-session"] }
data-encoding = "2.3.2"
futures-util = "0.3.23"
actix-utils = "3.0.0"
actix-cors = "0.6.2"